# ai-engineering-portfolio

./: .editorconfig  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  REQUIREMENTS.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: mcp.json  mcp.json.example
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.playwright-mcp/: page-2026-06-07T00-09-06-562Z.yml  page-2026-06-07T00-52-11-638Z.yml  page-2026-06-08T21-19-52-082Z.yml  page-2026-06-08T21-22-29-285Z.yml  page-2026-06-08T21-22-55-153Z.yml  page-2026-06-08T21-23-06-802Z.yml  page-2026-06-08T21-23-16-544Z.yml  (+72 more)
course_assistant/: .env.example  .gitignore  README.md  pyproject.toml
course_assistant/docs/source/: MVP_Spec.docx
course_assistant/src/course_assistant/: __init__.py
course_assistant/src/course_assistant/agent/: __init__.py  deps.py  dispatcher.py  graph.py  prompt.py  tools.py
course_assistant/src/course_assistant/config/: __init__.py  settings.py
course_assistant/src/course_assistant/drive/: __init__.py  classify.py  fake.py  models.py  service.py
course_assistant/src/course_assistant/homework/: __init__.py  compose.py  email.py  guardrail.py  models.py  session.py  submission.py
course_assistant/src/course_assistant/interface/: __init__.py  telegram_app.py
course_assistant/src/course_assistant/rag/: __init__.py  chunk.py  embeddings.py  extract.py  ingest.py  stores.py  vectorstore.py
course_assistant/src/course_assistant/scripts/: __init__.py  get_google_token.py
course_assistant/src/course_assistant/tools/: __init__.py  drive_lookup.py  homework.py  search_materials.py
course_assistant/tests/: conftest.py
course_assistant/tests/fixtures/: docs.py  drive_tree.py  fake_llm.py
course_assistant/tests/unit/: test_agent_graph.py  test_agent_tools.py  test_chunk.py  test_config.py  test_dispatcher.py  test_drive_classify.py  test_drive_lookup.py  test_drive_service.py  test_extract.py  test_get_token.py  test_homework_compose.py  test_homework_email.py  test_homework_guardrail.py  test_homework_models.py  test_homework_submission.py  test_ingest.py  test_search_materials.py  test_stores.py  test_submission_session.py  test_telegram_app.py
(+1311 files in other folders)
