[project]
name = "course-assistant"
version = "0.1.0"
description = "OzVaRoah AI Agent Course Bot — a bilingual Telegram assistant for the Oz VeRuach course"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Re'em Mor" }]
license = { text = "MIT" }

# Runtime dependencies. Phases that introduce each heavy dependency are noted so the
# scaffold (Phase 1) stays installable with only the lightweight core.
dependencies = [
    # Phase 1 — config & core (lightweight)
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Phase 2 — Drive retrieval
    "google-api-python-client>=2.130",
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    # Phase 3 — RAG ingestion + retrieval
    "chromadb>=0.5",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    # Phase 4 — homework email
    "google-auth-httplib2>=0.2",
    # Phase 4/5 — LLM + agent graph
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "langchain-openai>=0.2",
    "anthropic>=0.39",
    "openai>=1.40",
    # Phase 5 — Telegram interface
    "python-telegram-bot>=21.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
course-assistant-bot = "course_assistant.interface.telegram_app:main"
course-assistant-ingest = "course_assistant.rag.ingest:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/course_assistant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    # create_react_agent is deprecated in favor of the separate `langchain`
    # package's create_agent; we stay on langgraph.prebuilt to avoid the dep.
    "ignore:create_react_agent has been moved",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.mypy]
python_version = "3.11"
packages = ["course_assistant"]
mypy_path = "src"
strict = true
ignore_missing_imports = true
